--- a/style.css
+++ b/style.css
@@ -163,6 +163,10 @@ tbody {
     background: #eeffe6;
     text-align: center;
 }
+tfoot {
+    background: #eeffe6;
+    text-align: center; 
+}
 th,td {
     width: 225px;
     height: 75px;
@@ -176,8 +180,8 @@ th:first-child {
     color: #fff;
 }
 td:first-child {
-    font-wieght: bold;
-    background: #bde1ff
+    font-weight: bold;
+    background: #bde1ff;
 }
 /* Contact */
 label {
