--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ header {
     background: no-repeat lightgrey url(images/cliff_rock.jpg);
     background-size: 1500px;
 }
+#cliffs header {
+    background: no-repeat lightgrey url(images/forest_cliff.jpg);
+    background-size: 1500px;
+}
 .main-header {
     background-color:rgb(255, 255, 255, 0.8);
     width: 700px;
