--- a/style.css
+++ b/style.css
@@ -208,8 +208,7 @@ label {
   display: block;
   margin: 15px 0 0 0;
 }
-input,
-textarea {
+input, textarea {
   width: 300px;
 }
 /* attribute selector */
