--- a/style.css
+++ b/style.css
@@ -256,3 +256,8 @@ legend {
     width: 100%;
     height: auto;
 }
+/* index */
+#home section .timeofday {
+ font-family: Arial, Helvetica, sans-serif;
+ background-color: 0deg, rgba(251,215,139,1) 0%, rgba(118,213,245,1) 100%;
+}
