--- a/style.css
+++ b/style.css
@@ -256,8 +256,15 @@ legend {
     width: 100%;
     height: auto;
 }
-/* index */
-#home section .timeofday {
+/* clock */
+
+#timeofday {
+  padding: 15px 0 20px 0;
  font-family: Arial, Helvetica, sans-serif;
- background-color: 0deg, rgba(251,215,139,1) 0%, rgba(118,213,245,1) 100%;
+ text-align: center;
+ background: linear-gradient(
+   0deg,
+   rgba(251,215,139,1) 0%, 
+   rgba(118,213,245,1) 100%
+ )
 }
