--- a/style.css
+++ b/style.css
@@ -268,3 +268,10 @@ legend {
    rgba(118,213,245,1) 100%
  )
 }
+form .button input {
+  width: 8em;
+  height: 2.5em;
+  font-size: 1.2em;
+  font-weight: bold;
+  /*back
+}
