--- a/style.css
+++ b/style.css
@@ -256,8 +256,8 @@ legend {
     width: 100%;
     height: auto;
 }
-/* clock */
 
+/* clock */
 #timeofday {
   padding: 15px 0 20px 0;
  font-family: Arial, Helvetica, sans-serif;
@@ -268,6 +268,8 @@ legend {
    rgba(118,213,245,1) 100%
  )
 }
+
+/* Contact form */
 form .button input {
   width: 8em;
   height: 2.5em;
@@ -277,6 +279,7 @@ form .button input {
   color: #fff;
   border: none;
 }
+
 #contact p#codes {
   position: relative;
   left: 140px;
@@ -292,10 +295,10 @@ form .button input {
   font-weight: bold;
   border-radius: 5px;
 }
+
 #contact .randomcode input {
   position: relative;
   width: 125px;
   height: 18px;
   top: 15px;
-  
 }
