--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ form .button input {
 
 #contact p#codes {
   position: relative;
-  left: 140px;
+  left: 185px;
   bottom: 30px;
   text-align: center;
   display: block;
@@ -292,15 +292,25 @@ form .button input {
   width: 100px;
   background-color: #24242377;
   border: none;
-  padding: 4px;
+  padding: 10px;
   color: rgb(0, 0, 0);
   font-weight: bold;
   border-radius: 5px;
 }
-
+/* Char Text-box */
 #contact .randomcode input {
   position: relative;
+  left: 40px;
   width: 125px;
   height: 18px;
-  top: 15px;
+  top: 21px;
+}
+/* inquire button */
+#contact .button {
+  position: relative;
+  left: 150px;
+  bottom: 30px;
+  width: 125px;
+  height: 18px;
+  
 }
