--- a/style.css
+++ b/style.css
@@ -206,6 +206,36 @@ td:first-child {
 #activities .highlight {
   background-color: #9fd034b6;
 }
+
+/* display box 10-11-21 */
+#activities main #displaySelected {
+  visibility: hidden;
+  margin: 0 auto;
+  width: 600px;
+  border: 2px solid #9ed034;
+  padding: 0.75em;
+}
+
+#activities main #displaySelected #result, #activities main #displaySelected #sendinfo {
+  display: inline-block;
+  margin: 0;
+}
+
+#activities main #result {
+  min-height: 50px;
+  width: 300px;
+  padding: 0;
+}
+
+#activities main #result h4 {
+  margin-bottom: 1em;
+  font-size: 1.15em;
+}
+
+#activities main #displaySelected #sendinfo input[type="email"] {
+  width: 200px;
+}
+
 /* Contact */
 label {
   display: block;
